--- a/eTransfer/index.html
+++ b/eTransfer/index.html
@@ -1,53 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Send an e-Transfer for the Garage Sale</title>
-    <script>
-        // The main redirect logic
-        window.onload = function() {
-            // 1. Define the Interac e-Transfer URI with your email
-            const etransferUri = "interac-e-transfer://send?email=shaun@jsbg.ca";
-
-            // 2. Try to redirect to the app immediately
-            window.location.href = etransferUri;
-
-            // 3. (Optional) Fallback message if the app doesn't open
-            setTimeout(function() {
-                document.getElementById("fallback").style.display = "block";
-            }, 800); // Show fallback after 800ms if redirect seems to fail
-        };
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tap to Pay | JSBG</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             text-align: center;
-            padding: 50px;
-            background-color: #f4f4f4;
+            padding: 2rem;
+            max-width: 600px;
+            margin: 0 auto;
+            line-height: 1.6;
+            color: #333;
         }
-        #fallback {
-            display: none; /* Hidden by default */
-            margin-top: 2rem;
-            padding: 1rem;
-            border: 1px solid #ccc;
-            background-color: #fff;
-            border-radius: 5px;
-        }
-        a {
-            color: #0366d6;
-            text-decoration: none;
+        .success { 
+            color: green;
             font-weight: bold;
+            margin: 1rem 0;
+        }
+        .button {
+            background-color: #0366d6;
+            color: white;
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            margin: 1rem 0;
+            display: inline-block;
+            text-decoration: none;
+        }
+        .button:hover {
+            background-color: #0356b6;
+        }
+        .info-box {
+            margin-top: 2rem;
+            padding: 1.5rem;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+            text-align: left;
         }
     </style>
 </head>
 <body>
-    <h1>Opening your banking app...</h1>
-    <p>You should be redirected momentarily to send an e-Transfer.</p>
 
-    <div id="fallback">
-        <h2>Redirect didn't work?</h2>
-        <p>No problem! Please <strong>open your mobile banking app manually</strong>, go to Interac e-Transfer, and send money to:</p>
-        <p><a href="mailto:shaun@jsbg.ca">shaun@jsbg.ca</a></p>
-        <p><small><em>Be sure to enable Auto-Deposit for this recipient.</em></small></p>
+    <h1>✅ Payment Prepared</h1>
+    <p>Your recipient's email address is now copied to your clipboard.</p>
+    
+    <div id="confirmationMessage" class="success" style="display: none;">
+        ✔️ Copied: <strong>shaun@jsbg.ca</strong>
     </div>
+
+    <p>Simply open your banking app to complete the transfer. The amount field will be ready for you to enter.</p>
+
+    <a class="button" href="#" id="appButton">Open Banking App</a>
+
+    <div class="info-box">
+        <h3>Next Steps:</h3>
+        <ol>
+            <li>Tap <strong>"Open Banking App"</strong> above.</li>
+            <li>Choose to <strong>"Send Money"</strong> or <strong>"Send an e-Transfer"</strong>.</li>
+            <li>When asked for the recipient's email, just <strong>paste</strong>—it's already on your clipboard!</li>
+            <li>Enter the amount and send.</li>
+        </ol>
+        <p><em>Auto-deposit is enabled for <strong>shaun@jsbg.ca</strong>. No security question needed.</em></p>
+    </div>
+
+    <script>
+        // The bulletproof part: Copy the email to the clipboard automatically.
+        function copyToClipboard(text) {
+            navigator.clipboard.writeText(text).then(function() {
+                console.log('Copying to clipboard was successful!');
+                // Show a success message to the user
+                const confirmationEl = document.getElementById('confirmationMessage');
+                confirmationEl.style.display = 'block';
+            }).catch(function(err) {
+                console.error('Could not copy text: ', err);
+                // If automatic copy fails, do nothing. The user can still manually copy from the page.
+            });
+        }
+
+        // 1. Define the email address
+        const recipientEmail = 'shaun@jsbg.ca';
+
+        // 2. Execute the copy command as soon as the page loads
+        window.onload = function() {
+            copyToClipboard(recipientEmail);
+        };
+
+        // 3. Make the "Open Banking App" button try to deep link, but fail gracefully.
+        const appButton = document.getElementById('appButton');
+        appButton.addEventListener('click', function(event) {
+            event.preventDefault(); // Prevent the link from being a simple "#"
+            // Try to open the app. If it fails, the user just remains on the page. No harm done.
+            window.location.href = "interac-e-transfer://send?email=" + recipientEmail;
+        });
+    </script>
+
 </body>
 </html>
