Replace placeholder divs with images in index.html

--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -396,8 +396,8 @@
           </ul>
 
           <figure>
-            <div class="placeholder">Insert image: start/finish section with pegs placed in start</div>
-            <figcaption>Start/finish overview — useful for first-time players.</figcaption>
+            <img src="FullBoardSetup.jpg" alt="Full board setup showing all players and start areas" loading="lazy" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);" />
+            <figcaption>Full board setup — shows teams, player areas, and the general layout.</figcaption>
           </figure>
         </section>
 
@@ -459,7 +459,7 @@
           </ol>
 
           <figure>
-            <div class="placeholder">Insert image: start row with numbered positions (Start 0–4)</div>
+            <img src="PlayerOneStarted.jpg" alt="Close-up of a start row with numbered positions and a peg" loading="lazy" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);" />
             <figcaption>Numbered start row example for the “discard → move 1 space” rule.</figcaption>
           </figure>
         </section>
@@ -473,7 +473,7 @@
           <p class="muted">All cards can be played as face value instead of their special abilities below (Ace = 1, Jack = 11, King = 13). The symbols on the board are reminders so you don’t need to ask during the game and give away your hand.</p>
 
           <figure>
-            <div class="placeholder">Insert image: board symbols / icon legend</div>
+            <img src="BoardSymbols.jpg" alt="Board symbols legend showing special card reminders" loading="lazy" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border);" />
             <figcaption>Board symbol reminders for special cards.</figcaption>
           </figure>
 
