--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -659,6 +659,15 @@ img.zoomable { cursor: zoom-in; }
             <li><strong>V1</strong> – Finalized rules and variants.</li>
           </ul>
         </section>
+
+        <div class="divider"></div>
+
+        <section id="shoutouts">
+          <div class="section-title">
+            <h2>Shoutouts</h2>
+          </div>
+          <p class="muted">Special thanks to Taylor for introducing me to the game and to Jonothan for my first board and the layout.</p>
+        </section>
       </article>
     </div>
   </div>
