Update shoutouts text in index.html

--- a/ApologiesGameRules/index.html
+++ b/ApologiesGameRules/index.html
@@ -655,7 +655,7 @@ img.zoomable { cursor: zoom-in; }
           <div class="section-title">
             <h2>Shoutouts</h2>
           </div>
-          <p class="muted">Special thanks to Taylor for introducing me to the game and to Jonothan for my first board and the layout.</p>
+          <p class="muted">Special thanks to Taylor for introducing me to the original game (Dashka), Rylie for the new name to go with the revised rules and Jonothan for the wood/resin board with what turned out to be a great layout.</p>
         </section>
 
         <div class="divider"></div>
